@@ -14,6 +14,8 @@ package DXM;
                 already => '$_[0] already connnected',
 				anns => 'Announce flag set on $_[0]',
 				annu => 'Announce flag unset on $_[0]',
+				annts => 'Ann_Talk flag set on $_[0]',
+				anntu => 'Ann_Talk flag unset on $_[0]',
 				badnode1 => '$_[0] is now a bad node',
 				badnode2 => '$_[0] is now a good node',
 				badnode3 => 'List of Bad Nodes:-',
