@@ -1,0 +1,5 @@
+#
+# startup script example
+#
+# set maximum no of spots allowed to 100
+set/var $Spot::maxspots = 1
